@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 07-01-2005 fixed: filemanager, lock mode wasn't updated in both panes
   - 06-01-2005 fixed: filemanager, "Please insert disc" message on local shares
   - 06-01-2005 changed: New pixel shader output does YV12->RGB in one pass (using Butcher's old code).
   - 06-01-2005 removed: guide mapping from MCE remote in keymap.xml - was an unnecessary double up.
